smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-invalid-object-key1.smithy
// Parse error at line 3, column 6 near `100`
namespace com.foo
@foo(100: true)
string MyString
